<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="32dp"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/player_01"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/life_total"
                    android:id="@+id/player_01_life"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="center_horizontal"
                          android:paddingBottom="16dp"
                          android:paddingTop="16dp"
            >
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_minus_five"
                        android:id="@+id/button_minus_five_01"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_minus_one"
                        android:id="@+id/button_minus_01"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_plus_one"
                        android:id="@+id/button_plus_01"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_plus_five"
                        android:id="@+id/button_plus_five_01"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_02"
                    android:gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/life_total"
                    android:id="@+id/player_02_life"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="center_horizontal"
                          android:paddingBottom="16dp"
                          android:paddingTop="16dp"
            >
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_minus_five"
                        android:id="@+id/button_minus_five_02"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_minus_one"
                        android:id="@+id/button_minus_02"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_plus_one"
                        android:id="@+id/button_plus_02"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_plus_five"
                        android:id="@+id/button_plus_five_02"/>
            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_03"
                    android:gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/life_total"
                    android:id="@+id/player_03_life"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="center_horizontal"
                          android:paddingBottom="16dp"
                          android:paddingTop="16dp"
            >
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_minus_five"
                        android:id="@+id/button_minus_five_03" />
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_minus_one"
                        android:id="@+id/button_minus_03"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_plus_one"
                        android:id="@+id/button_plus_03"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_plus_five"
                        android:id="@+id/button_plus_five_03"/>
            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/player_04"
                    android:gravity="center"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/life_total"
                    android:id="@+id/player_04_life"/>
            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:gravity="center_horizontal"
                          android:paddingBottom="16dp"
                          android:paddingTop="16dp"
            >
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_minus_five"
                        android:id="@+id/button_minus_five_04"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_minus_one"
                        android:id="@+id/button_minus_04"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_plus_one"
                        android:id="@+id/button_plus_04"/>
                <Button
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/button_plus_five"
                        android:id="@+id/button_plus_five_04"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>